# MTAcoin

./: .gitignore  CMakeLists.txt  README.md  block.cpp  block.h  blockChain.cpp  blockChain.h  cryptocurrency_mining_linux_thread_proje  fakeMiner.cpp  fakeMiner.h  genera.cpp  global.cpp  global.h  main  main.cpp  main.h  makefile  miner.cpp  miner.h  server.cpp  server.h
